--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,9 +7,9 @@ jobs:
     working_directory: ~/repo
     steps:
       - checkout
-#      - add_ssh_keys:
-#          fingerprints:
-#            - "f8:06:81:36:fc:60:47:03:ac:af:c7:dc:23:28:5b:07"
+      - add_ssh_keys:
+          fingerprints:
+            - "ca:f5:3c:0a:78:51:24:60:8b:19:4a:59:c0:bf:52:ce"
       - run:
           name: Run tests
           command: |
